--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
+}
+
+.margen {
+    margin: 100px;
+}
+
+.tabla {
+    width: 100%;
+    text-align: left;
+}
+
+.tabla td {
+    padding: 10px 0;
+}
+
+#menu {
+    background-color: #253a46;
+    padding: 20px;
+    font-size: 20px;
+}
+
+#menu a {
+    text-decoration: none;
+    color: white;
+    text-transform: capitalize;
+    font-weight: bold;
+    margin-right: 20px;
+    padding-bottom: 5px;
+}
+
+#menu a:hover {
+    border-bottom: 2px solid white;
 }
